fix: cover image being offset on mobile view

--- a/_sass/custom/setup.scss
+++ b/_sass/custom/setup.scss
@@ -1,5 +1,13 @@
+@media (min-width: 50rem) {
+  .cover {
+    margin-left: -2rem;
+    margin-top: -2rem;
+    width: calc(100% + 4rem);
+  }
+}
+
 .cover {
-  margin-left: -2rem;
-  margin-top: -2rem;
-  width: calc(100% + 4rem);
+  margin-left: -1rem;
+  margin-top: -1rem;
+  width: calc(100% + 2rem);
 }
